# numbers

./: .clang-tidy  CMakeLists.txt
.github/workflows/: build_cmake.yml
src/: CMakeLists.txt
src/include/: bignum_template.hh  magnitude.hh
test/: CMakeLists.txt  constexpr_tests.cpp  magnitude_tests.cc  tests.cpp
